Added initial ICC parser and updated Tiff parser and Tiff_details module to display ICC details.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
+# Project files/folders to ignore
+tifinity/scripts/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
